objects/GBLite__GBTestSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>GBLite__Callout_Timeout_milliseconds__c</fullName>
        <label>Callout Timeout (milliseconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GBLite__Endpoint__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>GBLite__MP_Token__c</fullName>
        <label>MP Token</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GBLite__Namespace_Prefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>GBTestSettings</label>
</CustomObject>